--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
     "sharp": "^0.32.3",
+    "stripe": "^12.14.0",
     "validator": "^13.9.0"
   },
   "devDependencies": {
